tests/NormalTests/paczka1/small_fuzzy/83423966.err
Error in line 3: AHJoR7 A676 32,8
Error in line 2: JeXXnqS9 S335 10,2
Error in line 5: JeXXnqS9 A676 100,0
Error in line 7: VIR A676 55,0
